[package]
name = "hwhkit"
# Pinned ahead of the workspace (0.6.0-alpha.3) for a meta-crate-only patch
# release: graceful-shutdown self-restart fix. Sibling crates are unchanged
# and stay at alpha.3 (deps below pin them explicitly).
version = "0.6.0-alpha.4"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A batteries-included Rust web service toolkit (production-ready: health, metrics, OTel, graceful shutdown, JWT, rate-limit, idempotency, circuit-breaker, scheduler)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["web", "framework", "axum", "middleware", "production"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
http = "1"
http-body-util = "0.1"
uuid.workspace = true
parking_lot.workspace = true

# OOTB production-ready capabilities. Pulled in via the default feature set.
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }

jsonwebtoken = { version = "9.2", optional = true }
chrono = { workspace = true, optional = true }
tempfile = { version = "3.8", optional = true }
reqwest = { workspace = true, optional = true }
redis-client = { package = "redis", version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "script"], optional = true }
# Idempotency body fingerprinting + base64 cache encoding. Both are
# small, widely-vetted, and already pulled in transitively by other deps.
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
itoa = "1"

hwhkit-buildinfo = { version = "0.6.0-alpha.3", path = "../hwhkit-buildinfo" }
hwhkit-config = { version = "0.6.0-alpha.3", path = "../hwhkit-config" }
hwhkit-core = { version = "0.6.0-alpha.3", path = "../hwhkit-core" }
hwhkit-observability = { version = "0.6.0-alpha.3", path = "../hwhkit-observability" }
hwhkit-integration-postgres = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-postgres", optional = true }
hwhkit-integration-redis = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-redis", optional = true }
hwhkit-integration-mongodb = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-mongodb", optional = true }
hwhkit-integration-nats = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-nats", optional = true }
hwhkit-integration-qdrant = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-qdrant", optional = true }
hwhkit-integration-neo4j = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-neo4j", optional = true }
hwhkit-integration-s3 = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-s3", optional = true }
hwhkit-integration-oss = { version = "0.6.0-alpha.3", path = "../hwhkit-integration-oss", optional = true }
hwhkit-scheduler = { version = "0.6.0-alpha.3", path = "../hwhkit-scheduler", optional = true }

[features]
# OOTB production-grade defaults: every fresh service gets health, metrics,
# `/version`, the standard middleware bundle, request-id, graceful
# shutdown, and process-level metrics without writing extra code. Each
# capability has an opt-out feature flag so resource-constrained binaries
# can pare them down.
default = ["health-endpoints", "metrics", "process-metrics", "version-endpoints", "middleware-bundle", "graceful-shutdown", "request-id", "multi-tenant"]

# Tier 2 JWT chain (JWKS auto-fetch, multi-algorithm verify, axum extractor).
jwt = ["jsonwebtoken", "chrono", "dep:reqwest", "hwhkit-core/jwt"]
testing = ["tempfile"]

postgres = ["dep:hwhkit-integration-postgres"]
redis = ["dep:hwhkit-integration-redis"]
mongodb = ["dep:hwhkit-integration-mongodb"]
nats = ["dep:hwhkit-integration-nats"]
qdrant = ["dep:hwhkit-integration-qdrant"]
neo4j = ["dep:hwhkit-integration-neo4j"]
s3 = ["dep:hwhkit-integration-s3"]
oss = ["dep:hwhkit-integration-oss"]

# Tier 1 production defaults, each individually opt-out-able:
health-endpoints = []
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
process-metrics = ["metrics", "dep:sysinfo"]
version-endpoints = []
middleware-bundle = []
graceful-shutdown = []
request-id = []
otel = ["hwhkit-observability/otel"]
otel-sqlx = ["otel", "hwhkit-observability/otel-sqlx"]
otel-redis = ["otel", "hwhkit-observability/otel-redis"]
otel-reqwest = ["otel", "hwhkit-observability/otel-reqwest"]
migrations = ["postgres"]
# Multi-tenant primitives (TenantId / TenantScope / TenantExtractorLayer).
multi-tenant = ["hwhkit-core/multi-tenant"]

# Tier 2 production capabilities (all opt-in):
rate-limit = ["redis", "dep:redis-client"]
idempotency = ["redis", "dep:redis-client", "dep:sha2", "dep:base64"]
circuit-breaker = ["dep:reqwest"]
scheduler = ["dep:hwhkit-scheduler"]

full = ["jwt", "postgres", "redis", "mongodb", "nats", "qdrant", "neo4j", "s3", "oss", "health-endpoints", "metrics", "process-metrics", "version-endpoints", "middleware-bundle", "graceful-shutdown", "request-id", "multi-tenant", "otel", "otel-sqlx", "otel-redis", "otel-reqwest", "migrations", "rate-limit", "idempotency", "circuit-breaker", "scheduler"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
chrono = { workspace = true }
serial_test = "3"
tower = { workspace = true, features = ["util"] }
proptest = "1"
sha2 = "0.10"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
# Used by tests/e2e_serve.rs to drive a real TCP request against the
# server spun up by `production::server::run_with_listener`. Pulled in
# unconditionally (the optional `reqwest` line above is for the JWT /
# circuit-breaker features, which are opt-in).
reqwest = { workspace = true }
async-trait = { workspace = true }

[[bench]]
name = "middleware_stack"
harness = false
required-features = ["middleware-bundle", "request-id"]

[[bench]]
name = "metrics_middleware"
harness = false
required-features = ["metrics"]

# macOS proc_pidinfo / proc_fdinfo bindings used by the `process-metrics`
# sampler to count open file descriptors. Always pulled in on darwin
# (cheap; no other code in the crate uses it on other platforms).
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
# Build with every feature flag so the rendered docs include the
# JWT / multi-tenant / integration / scheduler surfaces, not just the
# default subset. `--cfg docsrs` lets us gate items like
# `#[doc(cfg(feature = "..."))]` in source.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
