[package]
name = "hwhkit-example-postgres-rest"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "REST API with the hwhkit Postgres integration; demonstrates pool() + ApiError."

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
hwhkit = { path = "../../crates/hwhkit", default-features = false, features = ["health-endpoints", "metrics", "version-endpoints", "graceful-shutdown", "request-id", "middleware-bundle", "postgres"] }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
